[package]
name = "dit"
version = "0.0.1"
edition = "2021"
description = "data that integrated with Git"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.53"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.15.0", features = ["full"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
clap = { version = "3.0.14", features = ["derive"] }