[package]
name = "dit"
version = "0.0.1"
edition = "2021"
description = "data that integrated with Git"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.53"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.4", features = ["full"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
clap = { version = "3.0.14", features = ["derive"] }
opendal = "0.5.2"
log = "0.4.17"

[dev-dependencies]
dotenv = "0.15.0"
